Implemented the photo upload functionality
Implemented the cloudinary Cloud for storing images, used viewChild, Used behaviour subject for component to component communication and photo alogirithms

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -11,5 +11,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "davwxi1kc",
+    "ApiKey": "688295291289942",
+    "ApiSecret": "Vk-Ee1xIPYcXj7APLZKiEKYwRow"
+  }
 }
