--- a/DatingApp.API/DatingApp.API.csproj
+++ b/DatingApp.API/DatingApp.API.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.8"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.8"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1"/>
+    <PackageReference Include="CloudinaryDotNet" Version="1.3.1"/>
   </ItemGroup>
 </Project>
