--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -13,8 +13,8 @@
   },
   "AllowedHosts": "*",
   "CloudinarySettings": {
-    "CloudName": "davwxi1kc",
-    "ApiKey": "688295291289942",
-    "ApiSecret": "Vk-Ee1xIPYcXj7APLZKiEKYwRow"
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
   }
 }
